# fluffos

./: .coveralls.yml  .dockerignore  .editorconfig  .gitignore  .gitmodules  .travis.yml  .travis_build.sh  .version  AGENTS.md  Artistic.README  Bugs  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CRYPTO_PACKAGE_ENHANCEMENT.md  Cargo.toml  ChangeLog  ChangeLog.alpha  ChangeLog.beta  ChangeLog.fluffos  ChangeLog.fluffos-2.x  ChangeLog.fluffos-3.x  Copyright  Credits  Credits.LPmud  Credits.MudOS  Dockerfile  Dockerfile.ubuntu  Exit_Codes  INSTALL  ISSUE_TRIAGE_2026-07.md  IT_CRASHED  Ideas  JSON_IMPROVEMENT_PLAN.md  MUDLIB_USAGE_GUIDE.md  Makefile.am  Makefile.in  Notices_For_Planned_MT_Environment.md  Performance  Platforms  (+31 more)
src/: #ChangeLog#  #GNUmakefile.in#  .#ChangeLog.fluffos-2.x.1.11  .#ChangeLog.fluffos-2.x.1.13  .#ChangeLog.fluffos-2.x.1.19  .#ChangeLog.fluffos-2.x.1.5  .#add_action.c.1.1.1.1  .#applies.h.1.2  .#applies_table.c.1.2  .#array.c.1.4  .#comm.c.1.10  .#comm.c.1.14  .#comm.c.1.15  .#comm.c.1.2  .#comm.c.1.3  .#console.c.1.1.1.1  .#ed.c.1.2  .#ed.h.1.1.1.1  .#file.c.1.1.1.1  .#func_spec.c.1.3  .#func_spec.c.1.4  .#generate.c.1.1.1.1  .#grammar.y.pre.1.2  .#hash.c.1.2  .#local_options.1.1.1.1  .#local_options.ds.1.1.1.1  .#local_options.ds.debug.1.2  .#local_options.ds.debug.1.3  .#local_options.dw.1.5  .#local_options.foundation.1.1.1.1  .#local_options.fr.1.1.1.1  .#local_options.lil.1.1.1.1  .#local_options.lil.1.2  .#local_options.lima.1.2  .#local_options.nm3.1.1.1.1  .#local_options.nm3.1.2  .#local_options.sapid.1.1.1.1  .#local_options.sapid.1.2  .#local_options.tmi2.1.2  .#lpc.h.1.1.1.1  (+492 more)
src/CVS/: Entries  Repository
src/ChangeLog.old/: 0.8  0.9.14  0.9.15  0.9.16  0.9.17  0.9.18  0.9.19  ChangeLog.v20  ChangeLog.v21
src/Win32/: ar.c  configure.h  cp.bat  mv.bat  rm.bat  touch.c
src/Win32/CVS/: Entries  Repository
src/amiga/: ChangeLog  Makefile  README  README-gcc  addr_server.info  amiga.h  ccdep.h  crypt.c  driver.info  driver.usage  func_spec.p.info  make_malloc.info  make_packages  mudmsgs.h  nsignal.h  obj.list  options.h  replace.c  semantic.cache  signal.c  signal_rr.c  socket.c  socket.h  socket_amitcp.c  socket_amitcp.h  socket_sim.c  socket_sim.h  socket_tcp.c  socket_tcp.h  strip.c  strip.info  times.h  touch.c
src/base/: Makefile.am  Makefile.in  README  package_api.h  std.h
src/base/internal/: EGCIterator.h  Makefile.am  Makefile.in  arch.h  crash_handler.cc  crash_handler.h  debugmalloc.cc  debugmalloc.h  external_port.cc  external_port.h  file.cc  file.h  hash.cc  hash.h  log.cc  log.h  lru_cache.h  md.cc  md.h  options.h  options_incl.h  options_internal.h  outbuf.cc  outbuf.h  port.cc  port.h  rc.cc  rc.h  rusage.cc  rusage.h  shared_string.cc  shared_string.hh  stats.cc  stats.h  stralloc.cc  stralloc.h  strput.cc  strput.h  strutils.cc  strutils.h  (+2 more)
src/build-aux/: config.status
src/compat/: README  fixstatic  global.h  options.h  simul_efun.c
src/compat/CVS/: Entries  Repository
src/compat/master/: parser_error_message.c  pulse.c
src/compat/misc/: call_out.c  heart_beat.c  state.c
src/compat/modules/: m_interactive.c  m_state.c
src/compat/simuls/: #break_string.c#  apply.c  break_string.c  call_out.c  dump_socket_status.c  ed.c  heart_beat.c  message.c  parse_command.c  printf.c  say.c  (+7 more)
src/compiler/: grammar  post  pre
src/debugger/: DESIGN.md  breakpoints.cc  debug_hook.h  debug_server.cc  debugger.h  debugger_stub.cc  inspect.cc  transport_lws.cc
src/efuns/: README  efunctions.c  efuns.h  matrix.c
src/include/: Makefile.am  Makefile.in  README  ffi.h  function.h  localtime.h  opcodes_extra.h  origin.h  parser_error.h  pcre_flags.h  port_config.h  runtime_config.h  semantic.cache  socket.h  socket_err.h  type.h
src/libtelnet/: AUTHORS  Doxyfile  Makefile.am  NEWS  README  configure.ac  libtelnet.c
src/lpc/: apply.cc  apply.h  apply_cache.cc  apply_cache.h  function.cc  function.h  interpret.cc  interpret.h  program.cc  program.h  svalue.cc  svalue.h
src/lpc_compiler/: grammar  post  pre
src/lws_wrapper/: IWebSocketHandler.h  LWSHandler.cc  LWSHandler.h  LwsHttpServer.cc  LwsHttpServer.h
src/m4/: ax_check_zlib.m4  ax_lib_event.m4  ax_lib_postgresql.m4  ax_path_lib_pcre.m4  fluffos_have_predefine.m4  fluffos_support_cxx11.m4  gcov.m4
src/mudlib/: GNUmakefile  GNUmakefile.pre  Makefile  Makefile.master  Makefile.pre  SMakefile  interface.c
src/net/: Makefile.am  Makefile.in  external_port.cc  external_port.h  msp.cc  msp.h  mssp.cc  mssp.h  net_compat.h  sys_telnet.h  telnet.cc  telnet.h  telnet_ext.cc  telnet_ext.h  tls.cc  tls.h  tls_stub.cc  transport.h  transport_libevent.cc  transport_native.h  websocket.cc  websocket.h  ws_ascii.cc  ws_ascii.h  ws_debug.cc  ws_debug.h  ws_telnet.cc  ws_telnet.h
src/templates/: shared_storage.hh
src/tests/: CMakeLists.txt  bench_compile.cc  bench_scratchpad.cc  test_compiler.cc  test_debugger.cc  test_lexer.cc  test_lpc.cc  test_ofile.cc  test_strutils.cc
src/testsuite/: .gitignore  telnet_test.expect  testfile.crlf
src/tools/: CMakeLists.txt  Makefile.am  Makefile.in  build_applies.cc  build_packages_genfiles.sh  edit_source.cc  make_func.y  make_grammar.sh  make_options_def.py  make_options_def.sh  make_options_defs.cc  preprocessor.cc  preprocessor.hpp
src/tracing/: CMakeLists.txt  fluffos.d  lag.stp
src/util/: threadpool-incl.h
src/vm/: Makefile.am  Makefile.in  README  vm.h  vm.hh
src/wasm/: README.md  backend_wasm.cc  comm_wasm.cc  comm_wasm.h  crash_handler_wasm.cc  main_wasm.cc
src/windows/: MudOS.mak  README.win32  REAMDE.win32  addr_server.mak  clean.bat  configure.h  edit_source.mak  mudos.mak  step1.bat  stepdbg.bat  steprel.bat
src/www/: AGENTS.md  README.md  addon-clipboard.js  example.js  fontobserver.js  index.html  normalize.css  readme.txt  telnet.js  test.html  widechar_width.js  xterm-addon-attach.min.js  xterm-addon-fit.js  xterm-addon-fit.min.js  xterm-addon-mxp-links.js  xterm-addon-unicode11.min.js  xterm-addon-unicode14.js  xterm-addon-web-links.js  xterm-addon-web-links.min.js  xterm.css  xterm.js  xterm.min.js
(+4813 files in other folders)
